Changes to HUD (fixed a few ejs render errors caused by undefined variables) Account split into 2 pages Account dropdown added to header. shifted dropdowns out of <ul> in header. minor style changes to account

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,6 +117,22 @@ h1 {
 h2 {
     font-size: 1.4em; /* 22px/16 */
 }
+#account {
+    background-color: rgba(0, 0, 0, .8);
+    display: none;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
+    text-align: left;
+    position: relative;
+}
+#account_info {
+    background-color: rgba(0, 0, 0, .9);
+    font-size: 1.2em;
+    height: 100%;
+    width: 100%;
+
+}
 
 #bitcoin_info {
     min-width: 620px;
@@ -135,14 +151,6 @@ h2 {
     display: inline;
     margin-left: .1em;
     margin-right: .1em;
-}
-
-#account_info {
-    background-color: rgba(0, 0, 0, .9);
-    font-size: 1.2em;
-    height: 100%;
-    width: 100%;
-
 }
 
 #container {
